--- a/templates/payment_details.html
+++ b/templates/payment_details.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Payment Details</title>
+    {% load static %}   
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 </head>
 <body>
     <div class="container">
