--- a/templates/show_table.html
+++ b/templates/show_table.html
@@ -2,9 +2,12 @@
 <html>
 <head>
     <title>Company Data</title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'table.css' %}">
 </head>
 <body>
     <h1>Company Data</h1>
+    
     <form method="post" action="/show_table">
         {% csrf_token %}
         <table border="1">
