final changes eveything working fine

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <h1>Search for a Company</h1>
-        <p class="subtitle">Stock analysis and screening tool for investors</p>
+        <p class="subtitle">Company pf details</p>
 
         <!-- Display error or success messages -->
         {% if error %}
@@ -38,9 +38,9 @@
         <div class="popular-companies">
             <h2>Example search:</h2>
             <a href="javascript:void(0);" onclick="searchCompany('Coastal Corp')">Coastal Corp</a>
-            <a href="javascript:void(0);" onclick="searchCompany('Frontier Springs')">Frontier Springs</a>
-            <a href="javascript:void(0);" onclick="searchCompany('ITD Cem')">ITD Cem</a>
-            <a href="javascript:void(0);" onclick="searchCompany('Krishca Strapp')">Krishca Strapp</a>
+            <a href="javascript:void(0);" onclick="searchCompany('Google')">Google</a>
+            <a href="javascript:void(0);" onclick="searchCompany('Amazon')">Amazon</a>
+            <a href="javascript:void(0);" onclick="searchCompany('Microsoft')">Microsoft</a>
             <a href="javascript:void(0);" onclick="searchCompany('Modison')">Modison</a>
             <a href="javascript:void(0);" onclick="searchCompany('Permanent Magnet')">Permanent Magnet</a>
             <a href="javascript:void(0);" onclick="searchCompany('Pix Transmission')">Pix Transmission</a>
