--- a/templates/payment_details.html
+++ b/templates/payment_details.html
@@ -3,7 +3,7 @@
 <head>
     <title>Payment Details</title>
     {% load static %}   
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'table.css' %}">
 </head>
 <body>
     <div class="container">
