--- a/templates/show_table.html
+++ b/templates/show_table.html
@@ -32,15 +32,15 @@
             </thead>
             <tbody>
                 {% for row in data %}
-                    <tr>
-                        <td>
-                            <input type="checkbox" name="selected_companies" value="{{ row.0 }}">
-                        </td>
-                        {% for col in row %}
-                            <td>{{ col }}</td>
-                        {% endfor %}
-                    </tr>
-                {% endfor %}
+                <tr>
+                    <td>
+                        <input type="checkbox" name="selected_companies" value="{{ row.0 }}">
+                    </td>
+                    {% for value in row %}
+                        <td>{{ value }}</td>
+                    {% endfor %}
+                </tr>
+            {% endfor %}
             </tbody>
         </table>
 
